--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -57,6 +57,7 @@ $orange-dark: rgb(201, 146, 59);
 $orange-light: rgb(218, 178, 121);
 $color-start: rgb(218, 178, 121);
 $grey-dark: rgb(64, 64, 64);
+$grey-dark-hover: rgb(21, 21, 21);
 $color-border-button-grey: rgb(225, 225, 225);
 $grey-medium: rgb(235, 235, 235);
 $grey-light: rgb(255, 255, 255);
