--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -116,3 +116,27 @@ html {
     display: none;
   }
 }
+
+
+// Resolve transform to new modal or see more information of section
+
+.transform__modal {
+  a {
+    float: right;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    color: $color-default-darkest;
+    span {
+      border: solid $color-start;
+      border-width: 0 2.5px 2.5px 0;
+      display: inline-block;
+      padding: 2.5px;
+      float: right;
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+      margin-top: 2px;
+      margin-left: 6px;
+    }
+  }
+}
