--- a/assets/scss/page/_event.scss
+++ b/assets/scss/page/_event.scss
@@ -1,4 +1,49 @@
 .event {
-  background-color: yellow;
-  position: position;
+  display: grid;
+  column-gap: 70px;
+  // Resolt event banner
+  .event__banner {
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 620px;
+    position: relative;
+    .event__banner__content {
+      position: absolute;
+      top: 356px;
+      p {
+        color: $orange-light;
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 10px;
+      }
+      h3 {
+        font-size: 24px;
+        font-weight: 400;
+        color: $color-default-lightest;
+        line-height: 32px;
+      }
+    }
+    .btn__sign__up__join {
+      position: absolute;
+      bottom: 73px;
+      @include border-radius-custom-gradient(0, $grey-dark, $orange-dark, $orange-light, $color-default-lightest, 50px);
+      padding: 20px;
+    }
+  } // End resolt
+
+  .event__info {
+    padding-top: 90px;
+    position: relative;
+    padding-right: 15px;
+    max-width: 600px;
+    .title {
+      &::after {
+        left: 0;
+      }
+      &::before {
+        left: -70px;
+      }
+    }
+  }
+
 }
