--- a/assets/scss/page/_online.scss
+++ b/assets/scss/page/_online.scss
@@ -29,7 +29,7 @@
           text-transform: uppercase;
           font-weight: 600;
           padding: 15px 13px;
-          line-heigh: 12px;
+          line-height: 12px;
           svg {
             height: 12px;
             margin-right: 3px;
