--- a/assets/scss/page/_event.scss
+++ b/assets/scss/page/_event.scss
@@ -1,11 +1,12 @@
 .event {
   display: grid;
   column-gap: 70px;
+  border-bottom: 1px solid $color-border-button-grey;
   // Resolve event banner
   .event__banner {
     background-size: cover;
     background-position: center;
-    height: 620px;
+    height: 621px;
     position: relative;
     .event__banner__content {
       position: absolute;
@@ -34,16 +35,21 @@
   // Resolve event information
   .event__info {
     padding-top: 90px;
+    padding-bottom: 12px;
     position: relative;
-    padding-right: 15px;
+    padding-right: 14px;
     max-width: 600px;
     .event__info__title {
       &.title {
+        margin-bottom: 60px;;
         &::after {
           left: 0;
+          top: 169px;
         }
         &::before {
           left: -70px;
+          top: 169px;
+          width: calc(100% + 55px);
         }
       }
     }
@@ -51,22 +57,80 @@
       .grid__item {
         display: flex;
         flex-wrap: nowrap;
+        margin-bottom: 51px;
         .date {
-          width: 60px;
           height: 70px;
           background-color: $color-background-calendar;
+          margin-right: 16px;
+          position: relative;
           p {
-            font-size: 48px;
+            font-size: 24px;
             font-weight: 300;
-            .day {
-              color: $orange-dark;
-            }
-            .month {
-              color: $color-text-grey;
+            padding: 3px 16.7px;
+          }
+          .day {
+            color: $orange-dark;
+            &::after {
+              @include line-simple-color(45px, 1px, $color-border-button-grey);
+              left: 8px;
+              bottom: 35px;
             }
           }
-         
-        }    
+          .month {
+            color: $color-text-grey;
+          }
+        }  
+        .description {
+          .description__time {
+            font-weight: 300;
+            font-size: 14px;
+            color: $color-text-grey;
+            margin-bottom: 14px;
+            padding-top: 4.5px;
+            span {
+              font-weight: 700;
+              font-size: 12px;
+              text-transform: uppercase;
+              color: $color-default-lightest;
+              vertical-align: top;
+              margin-right: 10px;
+              padding: 4.45px 21px 5px 22px;
+              @include border-radius-custom-gradient(0, $grey-dark, $orange-dark, $orange-light, $color-default-lightest, 0);
+            }
+          }
+          h4 {
+            margin-bottom: 8px;
+            .description__title {
+              font-size: 18px;
+              font-weight: 300;
+            }
+          }
+          .description__content {
+            color: $color-text-grey;
+            font-size: 14px;
+            font-weight: 300;;
+            line-height: 20px;
+            margin-bottom: 9px;
+          }
+          .description__sign__up__join {
+            &.transform__modal {
+              a {
+                span {
+                  margin-left: 0;
+                }
+                &::after {
+                  margin-top: 45px;
+                  left: 76px;
+                  
+                }
+              }
+            }
+          }
+        }  
+      }
+      br {
+        bottom: 232px;
+        @include line-simple-color(calc(100% - 15px), 1px, $grey-medium);
       }
     }
   }
