--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -58,29 +58,34 @@ html {
   }
 }  // End resolve
 
-// Resolve title
+// Resolve h2 title
 .title {
-  font-size: 48px;
-  font-weight: 400;
-  margin-bottom: 60px;
-  @media #{$info-phone}{
-    font-size: 36px;
-  }
-  &::after {
-    @include line-simple-color(170px, 4px, $orange-dark);
-    top: 176px;
-  }
-  &::before {
-    @include line-simple-color(945px, 4px, $color-line-grey);
-    top: 176px;
-  }
-}  // End resolve
+  position: relative;
+  h2 {
+    margin-bottom: 60px;
+    font-weight: 300;
+    font-size: 48px;
+    @media #{$info-phone}{
+      font-size: 36px;
+    }
+    &::after {
+      @include line-simple-color(170px, 4px, $orange-dark);
+      top: 86px;
+      left: 0;
+    }
+    &::before {
+      @include line-simple-color(100%, 4px, $color-line-grey);
+      top: 86px;
+    }
+  } 
+}
+ // End resolve
 
 // Resolve content above title
 .content {
     h5 {
       font-size: 24px;
-      margin-bottom: 27px;
+      margin-bottom: 17px;
       font-weight: 400;
     }
     p {
