--- a/assets/scss/page/_introduce.scss
+++ b/assets/scss/page/_introduce.scss
@@ -1,9 +1,6 @@
 .introduce {
   .introduce__container {
-    width: 45.57%;
-    max-width: 875px;
     height: 620px;
-    left: 54.43%;
     z-index: 1;
     position: absolute;
     .introduce__container__content {
@@ -13,11 +10,11 @@
       left: 70px;
       .title {
         color: $color-default-lightest;
-          margin-bottom: 57px;
-          &::after {
+          margin-bottom: 56px;
+          h2::after {
             left: 0;
           }
-          &::before {
+          h2::before {
             opacity: 0.8;
             left: -70px;
           }
