--- a/assets/scss/page/_online.scss
+++ b/assets/scss/page/_online.scss
@@ -8,14 +8,12 @@
       justify-content: space-between;
       margin-bottom: 56px;
       .title {
-        &::before {
+        h2::before {
           @include line-simple-color(calc(100% - 30px), 4px, $color-line-grey);
-          top: 340px;
         }
-        &::after {
+        h2::after {
           @include line-simple-color(170px, 4px, $orange-dark);
           left: 15px;
-          top: 340px;
         }
       }
       .suggest__course {
