--- a/assets/scss/page/_book.scss
+++ b/assets/scss/page/_book.scss
@@ -5,11 +5,11 @@
         .title {
             margin-bottom: 56px;
             h2::before {
-                @include line-simple-color(calc(100% - 30px), 4px, $color-line-grey);
+                @include line-simple-color(100%, 4px, $color-line-grey);
             }
             h2::after {
                 @include line-simple-color(170px, 4px, $orange-dark);
-                left: 15px;
+                left: 0;
             }
         }
         .grid {
