--- a/assets/scss/page/_news.scss
+++ b/assets/scss/page/_news.scss
@@ -1,8 +1,12 @@
 .news {
-    &.container {
+    background-color: $color-background-calendar;
+    .container {
         padding-top: 90px;
+        padding-bottom: 107px;
         .title {
-            margin-bottom: 56px;
+            h2 {
+                margin-bottom: 56px;
+            }
         }
         .news__grid {
             display: grid;
@@ -11,15 +15,15 @@
             .news__grid__card {
                 .card__header {
                     height: 170px;
+                    margin-bottom: 11px;
                 }
                 .card__body {
                     display: flex;
                     flex-wrap: nowrap;
-                    margin-bottom: 51px;
                     .date {
                         height: 70px;
-                        background-color: $color-background-calendar;
-                        margin-right: 16px;
+                        background-color: $color-default-lightest;
+                        margin-right: 15px;
                         position: relative;
                         p {
                             font-size: 24px;
@@ -39,13 +43,6 @@
                         }
                     }  
                     .description {
-                        .description__time {
-                            font-weight: 300;
-                            font-size: 14px;
-                            color: $color-text-grey;
-                            margin-bottom: 14px;
-                            padding-top: 4.5px;
-                        }
                         h4 {
                             margin-bottom: 8px;
                             .description__title {
@@ -58,7 +55,12 @@
                             font-size: 14px;
                             font-weight: 300;;
                             line-height: 20px;
-                            margin-bottom: 9px;
+                            margin-bottom: 5px;
+                        }
+                        .description__footer {
+                            font-size: 12px;
+                            font-weight: 900;
+                            color: $orange-dark;
                         }
                     }
                 }
